syntax = "proto3";

package greet;

option go_package="./greet/greetpb";


message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreetRequest {
  Greeting greeting = 1;
}

message GreetResponse {
  string result = 1;
}

message GreetManyTimesRequest {
  Greeting greet = 1;
}

message GreetManyTimeResponse {
  string result = 1;
}

message LongGreetRequest {
  Greeting greet = 1;
}

message LongGreetResponse {
  string result = 1;
}

message GreetWithDeadlineRequest {
  Greeting greet = 1;
}

message GreetWithDeadlineResponse {
  string result = 1;
}

service GreetService {
  // Unary API
  // the name of your API should be what the Request and Response will be named by
  rpc Greet (GreetRequest) returns (GreetResponse) {};

  // Server Streaming
  rpc GreetManyTimes(GreetManyTimesRequest) returns (stream GreetManyTimeResponse) {}

  // Client Streaming
  rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse) {}

  // Unary Deadline
  rpc GreetWithDealine(GreetWithDeadlineRequest) returns (GreetWithDeadlineResponse) {};
}

